--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <cuke4duke.version>0.4.3</cuke4duke.version>
   </properties>
 
   <repositories>
@@ -51,7 +52,7 @@
     <dependency>
       <groupId>cuke4duke</groupId>
       <artifactId>cuke4duke</artifactId>
-      <version>0.3.2</version>
+      <version>${cuke4duke.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -93,6 +94,7 @@
       <plugin>
         <groupId>cuke4duke</groupId>
         <artifactId>cuke4duke-maven-plugin</artifactId>
+        <version>${cuke4duke.version}</version>
         <configuration>
           <cucumberArgs>
             <cucumberArg>--color</cucumberArg>
@@ -101,7 +103,7 @@
             <cucumberArg>--guess</cucumberArg>
           </cucumberArgs>
           <gems>
-            <gem>install cuke4duke --version 0.3.2</gem>
+            <gem>install cuke4duke --version ${cuke4duke.version}</gem>
           </gems>
         </configuration>
         <executions>
